--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,12 @@ img {
 #call-box {
     color: #f9faf8;
     background-color: #3882f6;
-    margin-bottom: auto;
+    border-radius: 5px;
+    margin: 7% 15% 7% 15%;
+    padding: 3% 7% 3% 7%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #call-box .button{
@@ -130,9 +135,12 @@ img {
 }
 
 footer {
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
     bottom: 0;
     width: 100%;
+    height: 85px;
     text-align: center;
     color: #F9FAF8;
     background-color: #1F2937;  
